--- a/database/pom.xml
+++ b/database/pom.xml
@@ -17,9 +17,9 @@
             <artifactId>lombok</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.zenframework.z8.dependencies.commons</groupId>
-            <artifactId>postgresql-42.0.0</artifactId>
-            <version>2.0</version>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.2.5</version>
         </dependency>
         <dependency>
             <groupId>org.apache.tomcat</groupId>
@@ -31,6 +31,12 @@
             <artifactId>jstl</artifactId>
             <version>1.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>5.2.12.Final</version>
+        </dependency>
+
     </dependencies>
 
 </project>
